# frida-mcp

./: .gitignore  .mcp.json  README.md  pyproject.toml
docs/specs/: 2026-03-10-frida-mcp-design.md
skills/: reverse-analyze.md
src/frida_mcp/: connection.py  executor.py  logcat.py  messages.py  server.py  setup.py
src/frida_mcp/skills/: trace-vm.md
